--- a/projectk/src/styles/ListPageCss.css
+++ b/projectk/src/styles/ListPageCss.css
@@ -39,6 +39,7 @@
 }
 .InfoBtn{
     margin-bottom: 30px;
+    float: left;width: 100% ;
 }
 .ToonTinfo p{
 
@@ -70,8 +71,22 @@ li{
 }
 
 .List{
+    width: 70%;
+    float: left;
+    margin-left: 15%;
+    height: 800px;
+}
+.Pagination{
+    float: left;
     width: 100%;
-    margin: 0 auto;
+    text-align: center;
+    margin-top: 35px;
+}
+.Pagination Button{
+    background-color: white;
+    border: none;
+    cursor:pointer;
+    margin-right: 8px;
 }
 .ListItem{
     width: 100%;
@@ -83,7 +98,6 @@ li{
     width:15%;
     height: 80px;
     float: left;
-    background-color: yellow;
 }
 .Episode{
     width: 80%;
@@ -100,3 +114,4 @@ li{
 .SU span{
     margin-left: 20px;
 }
+
