--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -3,180 +3,56 @@
     text-decoration-style: none;
     text-decoration: none; /* 링크의 밑줄 제거 */
     color: inherit; /* 링크의 색상 제거 */
-}
-.header{
-    float: left;
-    width: 100%;
-    height: 80px;
-    border-bottom: 1px solid gray;
-
-}
-.Logo{
-    margin-left: 5%;
-    float: left;
-    width: 20%;
-    font-size: 30px;
-}
-.SerchBar{
-    width: 15%;
-    height: 30px;
-    float: left;
-    margin-top: 22.5px;
-    margin-left: 50%;
-}
-.LoginBtn{
-    margin-top: 22.5px;
-    margin-right: 5%;
-    height: 35px;
-    float: right;
-    width: 4%;
+    width: 360px;
+    margin:  0 auto;
 }
 
-
-
-.DayBox{
-    width: 100%;
-    border-bottom: 1px solid gray;
-}
-.Day{
-    margin: 0 auto;
-    width: 90%;
-    height:140px;
-}
-.Day li{
-    float: left;
-    list-style: none;
-    width: 100px;
-    line-height: 60px;
-    font-size: 20px;
-}
 .Categories{
-
+    font-size: 1vw;
     width: 90%;
-    height: 50px;
+    height: 2vw;
+    float: left;
     margin: 0 auto;
     margin-top: 30px;
 }
-.NewToon{
-    width: 90%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    
-}
-.NewToonInfo{
-    border: 1px solid #000;
-    width: 80%;
-    margin: 0 auto;
-    height: 280px;
-}
-.NewToonInfo img{
-    width: 100%;
-    height: 200px;
-}
-.NewToonInfo .Title{
-    position: relative;
-    top:0px;
-}
+
 
 .AllToon{
-    width: 90%;
-    margin-left: 5% ;
+    width: 360px;
+    margin: 0 auto;
     float: left;
     border-collapse:collapse;
 }
 .AllToon table{
-    width: 100%;
+    width: 360px;
     
-    border: 1px solid rgb(230, 226, 226);
 }
 .AllToon table p{
-    line-height: 1px;
     margin-left: 5%;
+    margin-top: 3%;
+    float: left;
 }
 
 table , th ,td ,td{
 
   border-collapse: collapse;
 }
-.AllToon table th{
-    border-right: 1px solid rgb(230, 226, 226);
-}
-.AllToon table td{
-    border-right: 1px solid rgb(230, 226, 226);
-}
 
+.AllToon .ToonTitle{
+    font-size: 1vw;
+}
 .AllToon .AllToonInfo img{
-    width: 95%;
-    height: 300px;
-    padding: 2.5%;
+    width: 9vw;
+    height: 10vw;
+    float: left;
     text-align: center;
     border-collapse:collapse;
 
 }
 .AllToon .AllToonInfo{
-    height: 350px;
+    height: 12vw;
+    width: 9vw;
     border-collapse:collapse;
-}
-.tag{
-    float: left;
-    width: 90%;
-    margin: 0 auto;
-}
-.tagItem {
-    width: 100%;
-    margin-left: 5%;
-    float: left;
-    
-
-}
-
-.tag .tagItem li{
-    float: left;
-    list-style: none;
-    text-align: center;
-    font-size: 30px;
-    margin-right: 4%;
-    margin-left: 4%;
-    background-color: rgb(230, 226, 226);
-    padding: 10px;
-    border-radius: 10px;
-}
-
-
-.tag h3{
-    color:red;
-    width: 90%;
-}
-.footer{
-    border-top: 1px solid rgb(230, 226, 226);
-    width: 90%;
-    position: relative;
-    margin-left: 5%;
-    float: left;
-    height: 100px;
-    bottom: 0px;
-    margin-top: 50px;
-}
-.footer .FL{
-    width: 55%;
-    background-color: red;
-}
-.footer li{
-    margin-top: 35px;
-    text-align: center;
-    font-size: 13px;
-    width: 15%;
-    list-style-type: none;
-    float: left;
-    border-right: 1px solid rgb(230, 226, 226);
-}
-.FR{
-    float: right;
-    margin-top: 30px;
-    font-size: 13px;
-    line-height: 0px;
-    width: 45%;
 }
 
 
