--- a/my-app/src/styles/ListPageCss.css
+++ b/my-app/src/styles/ListPageCss.css
@@ -3,54 +3,62 @@
     margin: 0 auto;
 }
 .ListInfo{
-    height: 320px;
-    width: 70%;
+    height: 100px;
+    float: left;
+    width: 100%;
     margin: 0 auto;
+
+    
 }
 .ListImgBox img{
     float: left;
-    width: 25%;
+    width: 100%;
     background-color: ivory;
-    height: 300px;
+    height: 160px;
     margin-right: 15px;
 }
 
 .ListInfo p{
     float: left;
-    width: 30%;
+    width: 100%;
+    height: 100px;
 }
 .GrayP{
     color:gray;
 }
 .ListInfo h3{
+    
     position: relative;
     top:20px;
-    line-height: 10px;
 }
 .ListInfo span{
     color:black;
     margin-left: 5%;
     width: 20%;
 }
+.TextBox{
+    height: 150px;
+    font-size: 1vw;
+}
+.TextBox h3{
+}
 .ToonTinfo{
-    float: left;
-    width: 70%;
-    height: 100px;
+    line-height: 100px;
 }
 .InfoBtn{
+    width: 100%;
     margin-bottom: 30px;
     float: left;width: 100% ;
 }
 .ToonTinfo p{
-
     color:black;
     width: 100%;
 }
 
 .IBtn{
-    width: 40%;
-    margin-right: 10px;
-    height: 55px;
+    width: 30%;
+    margin-right: 2vw;
+    height: 35px;
     border-radius: 5px;
     border: 1px solid rgb(230, 226, 226);
     background-color: rgb(247, 247, 247);
@@ -62,19 +70,24 @@
 .SNSBTN{
     border-radius: 5px;
     width: 17.5%;
-    height: 55px;
+    height: 35px;
+
     background-color: rgb(247, 247, 247);
     border: 1px solid rgb(230, 226, 226);
 }
 li{
     list-style: none;
 }
+.ListInfoBox{
+    width: 100%;
+    float: left;
+    height: 350px;
+}
 
 .List{
-    width: 70%;
-    float: left;
-    margin-left: 15%;
-    height: 800px;
+    float: right;
+    width: 100%;
+
 }
 .Pagination{
     float: left;
@@ -87,6 +100,7 @@ li{
     border: none;
     cursor:pointer;
     margin-right: 8px;
+    width: 10%;
 }
 .ListItem{
     width: 100%;
@@ -105,17 +119,12 @@ li{
     height: 30px;
     font-size: 16px;
     font-weight: bold;
+    line-height: 3.2vw;
     float: left;
     margin-left: 2%;
 }
-.SU{
-    float: left;
-    height: 30px;
-    font-size: 14px;
-}
-.SU p{
-    margin-left: 14%;
-}
+
+
 .SU span{
     margin-left: 20px;
 }
