--- a/my-app/src/styles/FooterCss.css
+++ b/my-app/src/styles/FooterCss.css
@@ -1,11 +1,15 @@
-
+@media screen and (max-width:500px) and (min-width:10px){
+    .footer{
+        position: absolute;
+        bottom: 0;
+        width: 360px !important;
+    }
+}
 .footer{
     border-top: 1px solid rgb(230, 226, 226);
     width: 100%;
-    position: relative;
     float: left;
-    height: 100px;
-    bottom: 0px;
+    height: 60px;
     margin-top: 1vw;
 }
 .footer .FL{
