--- a/my-app/src/styles/TagCss.css
+++ b/my-app/src/styles/TagCss.css
@@ -27,4 +27,22 @@
     font-size: 1vw;
     width: 90%;
     height: 2vw;
+    margin-bottom: 15px;
+}
+
+@media screen and (max-width:500px) and (min-width:30px){
+    .tag .tagItem{
+        margin-left: 7%;
+        
+    }
+    .tagItem li{
+        margin-bottom: 15px !important;
+    }
+    .tah h3{
+    }
+    .tag .tagItem li{
+        width: 15%;
+
+    }
+
 }
