--- a/my-app/src/styles/LoginCss.css
+++ b/my-app/src/styles/LoginCss.css
@@ -1,4 +1,8 @@
+@media screen and (max-width:500px) and (min-width:10px) {
+
+}
 .LoginPage {
+    width: 360px;
     margin: 0 auto;
     text-align: center;
   }
@@ -17,12 +21,12 @@
     display: flex;
     flex-direction: column; /* 세로 정렬을 위한 열 방향 설정 */
     align-items: center; /* 가운데 정렬 */
-    width:45%;
-    height: 300px;
+    width:100%;
+    height: 350px;
     margin: 0 auto;
     border: 1px solid black;
     border-radius: 30px;
-    margin-top: 10%;
+    margin-top: 40%;
   }
   .LoginPageBtn{
     width: 60%;
