--- a/my-app/src/styles/ListPageCss.css
+++ b/my-app/src/styles/ListPageCss.css
@@ -1,11 +1,45 @@
+@media screen and (max-width:721px) and (min-width:501px){
+    .tab2{
+        line-height: 10vw !important;
+    }
+    #line{
+        line-height: 10px;
+    }
+    .ListInfoBox{
+        height: 500px !important;
+    }
+    .List{
+        margin-top: 30px;
+    }
+
+}
 @media screen and (max-width:500px) and (min-width:10px) {
+
+
+    .ListInfo .TextBox .GrayP{
+        position: relative;
+        bottom: 15vw;
+    }
+    .TextBox {
+        width: 80% !important;
+        margin-left: 10%;
+        font-size: 10px !important;
+        
+    }
+    .tab2{
+        line-height: 40px;
+    }
+    .ListImgBox img{
+        height: 25vw !important;
+    }
+    .ListInfoBox{
+        height: 71.5vw !important;
+    }
     .ListItem{
         width: 100% !important;
-
-        background-color:  red;
     }
     .ListPage{
-        width: 90% !important;
+        width: 80% !important;
     }
     .ListInfo h3{
         float: left;
@@ -14,26 +48,49 @@
     .ListImg{
         float: left;
         width: 70% ;
+        
+        
     }
     .ListImg img{
         float: left;
-        width: 35% !important;
+        width: 55% !important;
     }
     .InfoBtn{
-        display: none !important;
+        float: left;
+
+        width:80% !important;
     }
-    .Pagination{
-        margin-top: 15px !important;
-        margin-bottom: 5px;
-    }
-    .Episode{
+     
+     #PointBtn{
+        font-size: 1px;
+        height: 5vw;
+        width: 100% !important;
+     }
+     .IBtn{
+        font-size: 1px;
+        margin-top: 1vw;
+        width: 45% !important;
         float: left !important;
-        width: 30% !important;
+     }
+     .SNSBTN{
+        font-size: 1px;
+        margin-top: 1vw;
+        width: 45% !important;
+        float: right !important; 
+     }
+    .Pagination{
 
     }
+    .Episode{
+        width: 20% !important;
+
+    }
+    .tab{
+        line-height: 2.6vw !important;
+    }
     .Episode p{
-        font-size: 1.2px;
-        margin-top: 3%;
+        width: 100%;
+        font-size: 1px;
         line-height: 5vw;
     }
     .SU{
@@ -54,6 +111,7 @@
     
 }
 .ListImgBox img{
+
     float: left;
     width: 100%;
     background-color: ivory;
@@ -68,9 +126,11 @@
 }
 .GrayP{
     color:gray;
+    float: left;
+    position: relative;
+    bottom:5.5vw
 }
 .ListInfo h3{
-    
     position: relative;
     top:20px;
 }
@@ -82,20 +142,14 @@
 .TextBox{
     height: 150px;
     font-size: 1vw;
+    width: 100%;
 }
-.TextBox h3{
-}
-.ToonTinfo{
-        line-height: 100px;
-}
+
 .InfoBtn{
+    margin-left: 5%;
     width: 100%;
-    margin-bottom: 30px;
-    float: left;width: 100% ;
-}
-.ToonTinfo p{
-    color:black;
-    width: 100%;
+    float: left;
+    margin-top: 10%;
 }
 
 .IBtn{
@@ -124,11 +178,12 @@ li{
 .ListInfoBox{
     width: 100%;
     float: left;
-    height: 350px;
+    height: 300px !important;
 }
 
+
 .List{
-    float: right;
+    float: left;
     width: 100%;
 
 }
@@ -158,11 +213,11 @@ li{
     background-color: yellow;
 }
 .Episode{
+    margin-top: 1.5vw;
     width: 80%;
     height: 30px;
-    font-size: 16px;
+    font-size: 10px;
     font-weight: bold;
-    line-height: 3.2vw;
     float: left;
     margin-left: 2%;
 }
