--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -1,10 +1,23 @@
 @media screen and (max-width:361px) and (min-width:10px) {
-    *{
+    /* 메인페이지  */
+    .MainPage{
+        width: 360px !important;
         margin: 0 auto;
-        width: 100%;
+    } 
+    .AllToon{  
+        width: 80% !important;
+        margin: 0 auto;
+        background-color: aliceblue;
     }
+
+    .AllToonInfo{
+        margin: 0 auto ;
+    }
+    .AllToonInfo img{float: right !important;
+    }
+    /* 데이페이지 */
     .DayToon{
-        width: 30% !important;
+        width: 100% !important;
     }
     .HHH{
         width: 100%;
@@ -14,7 +27,7 @@
     .DayToonItem{
         width: 10vw !important;
         float: left !important;
-        display: inline !important;
+        
     }
     .DayToonItem img{
         position: relative;
@@ -46,6 +59,17 @@
         float: left;
         width: 100% !important;
     }
+
+    /* 태그페이지 */
+    .tag{
+        width: 80% !important;
+        background-color: red;
+    }
+    .tagItem li{
+        width: 8.7vw !important ;
+        /* margin-right: 1.5vw !important; */
+        margin-left: 5.5px;
+    }
 }
 *{
     
@@ -75,7 +99,6 @@
     height: 2vw;
     float: left;
     margin: 0 auto;
-    margin-top: 30px;
 }
 
 
@@ -107,14 +130,27 @@ table , th ,td ,td{
     width: 7.5vw;
     height: 10vw;
     float: left;
+    background-color: black;
     text-align: center;
     border-collapse:collapse;
-
+    
+}
+.AllTonnbox{
+    width: 100% ;
+    float: left !important;
 }
 .AllToon .AllToonInfo{
+    width: 10vw;
     height: 12vw;
-    width:10vw;
+    overflow: hidden;
     border-collapse:collapse;
+}
+.ATBox{
+    float: left;
+    width: 30%;
+}
+tr{
+    float: left;
 }
 .DayToon h3{
     font-size: 10px;
