--- a/my-app/src/styles/NewToonCss.css
+++ b/my-app/src/styles/NewToonCss.css
@@ -1,9 +1,10 @@
 @media screen and (max-width:361px) and (min-width:10px) {
 
   .NewToonInfo{
-    width: 70% !important;
+    width: 80% !important;
     height: 30vw !important;
     background-color: honeydew;
+    margin: 0 auto;
   }
   .DayToon h3{
     font-size: 1px !important;
@@ -11,8 +12,10 @@
   }
   .NewToon{
     background-color: honeydew;
-    width: 100% !important;
-    margin-left: 0% !important;
+    width: 80% !important;
+    margin: 0 auto;
+    margin-left: 5% !important;
+    min-height: 5%;
   }
   .NewToonInfo img {
     width: 100% !important;
